--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "docker:build": "docker build . --tag littlebrown/faxenger",
-    "docker:run": "docker run -p 5000:5000 -e PORT=5000 -e TCP_PORT=8000 littlebrown/faxenger",
+    "docker:run": "docker run -p 5000:5000 -e PORT=5000 -e TCP_PORT=9000 littlebrown/faxenger",
+    "docker:push": "docker push littlebrown/faxenger",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
