--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "docker:build": "docker build . --tag littlebrown/faxenger",
+    "docker:build": "docker build . --platform linux/amd64 --tag littlebrown/faxenger",
     "docker:run": "docker run -p 5000:5000 -e PORT=5000 -e TCP_PORT=9000 littlebrown/faxenger",
     "docker:push": "docker push littlebrown/faxenger",
     "test": "echo \"Error: no test specified\" && exit 1"
